# whatsapp-blast-claudio

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: database.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: blast.rs  campaign.rs  contact.rs  mod.rs  recipient.rs  sender.rs  settings.rs  template.rs  user.rs
backend/src/routes/: auth.rs  blasts.rs  contacts.rs  mod.rs  senders.rs  settings.rs  templates.rs  users.rs  ws.rs
backend/src/services/: auth.rs  blasts.rs  contacts.rs  mod.rs  senders.rs  settings.rs  templates.rs
backend/src/utils/: auth.rs  excel.rs  mod.rs
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.tsx  useLanguage.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: BlastHistory.tsx  BlastProgress.tsx  BlastWizard.tsx  Contacts.tsx  Dashboard.tsx  Login.tsx  Register.tsx  Senders.tsx  Settings.tsx  Templates.tsx  Users.tsx
frontend/src/services/: api.ts
whatsapp-service/: .gitignore  Dockerfile  nodemon.json  package-lock.json  package.json
whatsapp-service/src/: connection.js  index.js  queue.js  sender.js
