[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
mongodb = { version = "2.8.2", features = ["tokio-runtime", "bson-chrono-0_4"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
calamine = "0.24.0"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
dotenvy = "0.15.7"
rand = "0.8.5"
